--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet"/>
 
-  <link rel="stylesheet" href="./style.css" />
+  <!-- CSS local -->
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
@@ -35,8 +36,8 @@
     <p>
       Desenvolvedor Full Stack com foco em aplicações web modernas,
       performáticas e bem estruturadas. Experiência em C#, ASP.NET MVC,
-      ASP.NET Core, React, bancos de dados relacionais, boas práticas,
-      Clean Code e arquitetura.
+      ASP.NET Core, React e bancos de dados relacionais.
+      Apaixonado por boas práticas, Clean Code e arquitetura.
     </p>
   </section>
 
@@ -87,6 +88,7 @@
     <p class="copy">© 2025 Gabriel Muniz</p>
   </footer>
 
-  <script src="./script.js"></script>
+  <!-- JS local -->
+  <script src="script.js"></script>
 </body>
 </html>
