Atualizando site com CSS e JS

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="hero-actions">
       <a href="#projects">Ver Projetos</a>
-      <a class="outline" href="Curriculo_Gabriel_Muniz.pdf" download>Baixar CV</a>
+      <a class="outline" href="Currículo Gabriel.pdf" download>Baixar CV</a>
     </div>
   </header>
 
