--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet"/>
 
   <!-- CSS -->
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="Style.css" />
 </head>
 <body>
 
@@ -99,6 +99,6 @@
   </footer>
 
   <!-- JS -->
-  <script src="script.js"></script>
+  <script src="Script.js"></script>
 </body>
 </html>
