Atualizando site com CSS e JS

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <article class="project-card">
         <h3>Gestão de Tarefas</h3>
         <p>Sistema web para controle de tarefas com CRUD e status.</p>
-        <a href="https://github.com/Gabriel-Dev-Muniz/Gestao-de-Tarefas" target="_blank">GitHub</a>
+        <a href="https://github.com/Gabriel-Dev-Muniz/Gerenciador-de-Tarefas.git" target="_blank">GitHub</a>
       </article>
     </div>
   </section>
