Atualizando site com CSS e JS

--- a/index.html
+++ b/index.html
@@ -38,62 +38,27 @@
 <section id="about">
   <h2>Sobre mim</h2>
   <p>
-  Desenvolvedor Full Stack Júnior formado em Desenvolvimento de Sistemas pelo SENAI.
-  Atuação em projetos web utilizando C#, .NET, JavaScript, HTML5 e CSS3, com integração
-  de versionamento via Git/GitHub. Possui experiência na construção de interfaces
-  responsivas, lógica de programação, organização de código e aplicação de boas práticas
-  de desenvolvimento. Busca oportunidade para evoluir tecnicamente e contribuir em
-  projetos reais.
-</p>
-
+    Desenvolvedor Full Stack Júnior formado em Desenvolvimento de Sistemas pelo SENAI.
+    Experiência prática com C#, .NET, JavaScript, HTML5, CSS3 e SQL Server.
+    Atuação em projetos web com foco em organização de código, boas práticas,
+    versionamento com Git/GitHub e desenvolvimento de interfaces responsivas.
+  </p>
 </section>
 
 <section id="skills">
   <h2>Tecnologias</h2>
 
   <div class="tech-grid">
-    <div class="tech-item">
-      <i class="devicon-csharp-plain"></i>
-      <span>C#</span>
-    </div>
-
-    <div class="tech-item">
-      <i class="devicon-dotnetcore-plain"></i>
-      <span>.NET</span>
-    </div>
-
-    <div class="tech-item">
-      <i class="devicon-javascript-plain"></i>
-      <span>JavaScript</span>
-    </div>
-
-    <div class="tech-item">
-      <i class="devicon-html5-plain"></i>
-      <span>HTML5</span>
-    </div>
-
-    <div class="tech-item">
-      <i class="devicon-css3-plain"></i>
-      <span>CSS3</span>
-    </div>
-
-    <div class="tech-item">
-      <i class="devicon-microsoftsqlserver-plain"></i>
-      <span>SQL Server</span>
-    </div>
-
-    <div class="tech-item">
-      <i class="devicon-git-plain"></i>
-      <span>Git</span>
-    </div>
-
-    <div class="tech-item">
-      <i class="devicon-github-original"></i>
-      <span>GitHub</span>
-    </div>
+    <div class="tech-item"><i class="devicon-csharp-plain"></i><span>C#</span></div>
+    <div class="tech-item"><i class="devicon-dotnetcore-plain"></i><span>.NET</span></div>
+    <div class="tech-item"><i class="devicon-javascript-plain"></i><span>JavaScript</span></div>
+    <div class="tech-item"><i class="devicon-html5-plain"></i><span>HTML5</span></div>
+    <div class="tech-item"><i class="devicon-css3-plain"></i><span>CSS3</span></div>
+    <div class="tech-item"><i class="devicon-microsoftsqlserver-plain"></i><span>SQL Server</span></div>
+    <div class="tech-item"><i class="devicon-git-plain"></i><span>Git</span></div>
+    <div class="tech-item"><i class="devicon-github-original"></i><span>GitHub</span></div>
   </div>
 </section>
-
 
 <section id="projects">
   <h2>Projetos</h2>
@@ -103,22 +68,31 @@
     <article class="project-card">
       <img src="images/Print_Gerenciador_de_Tarefas.png" alt="Gestão de Tarefas">
       <h3>Gestão de Tarefas</h3>
-      <p>Sistema web com CRUD e status.</p>
-      <a href="#">GitHub</a>
+      <p>Sistema web com CRUD, controle de status e organização visual.</p>
+      <a href="https://github.com/Gabriel-Dev-Muniz/Gerenciador-de-Tarefas" target="_blank">GitHub</a>
     </article>
-    
+
+    <!-- É só copiar esse bloco para adicionar mais projetos -->
+
   </div>
 </section>
 
 <footer id="contact">
   <h2>Contato</h2>
   <div class="social">
-    <a href="#"><i class="devicon-github-original"></i> GitHub</a>
-    <a href="#"><i class="devicon-linkedin-plain"></i> LinkedIn</a>
-    <a href="mailto:gabrielmunzz192@gmail.com"><i class="devicon-google-plain"></i> E-mail</a>
+    <a href="https://github.com/Gabriel-Dev-Muniz" target="_blank">
+      <i class="devicon-github-original"></i> GitHub
+    </a>
+    <a href="https://www.linkedin.com/in/gabriel-muniz-410621356/" target="_blank">
+      <i class="devicon-linkedin-plain"></i> LinkedIn
+    </a>
+    <a href="mailto:gabrielmunzz192@gmail.com">
+      <i class="devicon-google-plain"></i> E-mail
+    </a>
   </div>
   <p class="copy">© 2025 Gabriel Muniz</p>
 </footer>
 
+<script src="script.js"></script>
 </body>
 </html>
