--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <div class="hero-actions">
     <a href="#projects">Ver Projetos</a>
-    <a class="outline" href="Curriculo_Gabriel_Muniz.pdf" download>Baixar Currículo</a>
+    <a class="outline" href="Curriculo_Gabriel_Muniz (1).pdf" download>Baixar Currículo</a>
   </div>
 </header>
 
